fix whitespaces overflow in mobile breakpoints

--- a/public/laisin-css/homepage.css
+++ b/public/laisin-css/homepage.css
@@ -609,7 +609,7 @@ footer {
 
 .footer-bottom {
     background-color: #1f2630;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     color: white;
     text-align: center;
@@ -651,5 +651,8 @@ footer {
     }
     .footer-brands {
         margin: 28px;
+    }
+    .aboutus-laisin-img {
+        display: none;
     }
 }
